cabal-version:      2.4
name:               lambdacube-quake3-engine
version:            0.1.0.0
synopsis:           LambdaCube 3D based game engine inspired by idTech3

-- description:         
homepage:           lambdacube3d.com
license:            BSD-3-Clause
license-file:       LICENSE
author:             Csaba Hruska
maintainer:         csaba.hruska@gmail.com

-- copyright:           
category:           Game
build-type:         Simple
extra-source-files: cbits/stb_image.h
data-files:
  lc/Graphics.lc
  lc/Loading.json
  lc/Loading.lc
  lc/Material.lc
  lc/SimpleGraphics.json
  lc/SimpleGraphics.lc

library
  exposed-modules:
    GameEngine.Collision
    GameEngine.Content
    GameEngine.Data.BSP
    GameEngine.Data.GameCharacter
    GameEngine.Data.Material
    GameEngine.Data.MD3
    GameEngine.Graphics.BezierSurface
    GameEngine.Graphics.BSP
    GameEngine.Graphics.Culling
    GameEngine.Graphics.Frustum
    GameEngine.Graphics.GameCharacter
    GameEngine.Graphics.MD3
    GameEngine.Graphics.Quad
    GameEngine.Graphics.Storage
    GameEngine.Loader.BSP
    GameEngine.Loader.Entity
    GameEngine.Loader.GameCharacter
    GameEngine.Loader.Image
    GameEngine.Loader.MD3
    GameEngine.Loader.ShaderParser
    GameEngine.Loader.Zip
    GameEngine.RenderSystem
    GameEngine.Scene
    GameEngine.Utils

  other-modules:    Paths_lambdacube_quake3_engine
  build-depends:
    , aeson
    , base
    , binary
    , bytestring
    , containers
    , data-binary-ieee754
    , deepseq
    , digest
    , directory
    , filepath
    , hashable
    , JuicyPixels
    , lambdacube-compiler
    , lambdacube-gl
    , lambdacube-ir
    , megaparsec            ^>=6.5.0
    , microlens-platform
    , mtl
    , pretty-show
    , time
    , transformers
    , unordered-containers
    , vect                  ^>=0.4.7
    , vector
    , zlib

  default-language: Haskell2010
  c-sources:        cbits/stb_image.c
  include-dirs:     cbits
  cc-options:       -O3 -DSTBI_NO_HDR -DSTBI_NO_STDIO -DSTBI_FAILURE_USERMSG
