cabal-version: 2.4
name:          lambdacube-quake3
version:       0.1.0.0
synopsis:      first person shooter game inspired by Quake 3
homepage:      lambdacube3d.com
license:       BSD-3-Clause
author:        Csaba Hruska
maintainer:    csaba.hruska@gmail.com
category:      Game
build-type:    Simple

executable shooter
  main-is:          Main.hs
  other-modules:
    Collision
    Entities
    GameLogic
    Items
    LoadEntities
    LoadResources
    Monads
    Movers
    Player
    RenderGame
    Visuals
    World

  default-language: Haskell2010
  build-depends:
    , base
    , binary
    , bytestring
    , containers
    , directory
    , filepath
    , GLFW-b
    , lambdacube-quake3-engine
    , mersenne-random-pure64
    , microlens-platform
    , MonadRandom
    , mtl
    , OpenGLRaw
    , transformers
    , vect                      ^>=0.4.7
    , vector

  ghc-options:      -rtsopts
