cabal-version: 2.4
name:          md3-show
version:       0.1.0.0
synopsis:      idTech3 MD3 model printer
license:       BSD-3-Clause
license-file:  LICENSE
author:        Csaba Hruska
build-type:    Simple

executable md3-show
  main-is:          Md3Show.hs
  default-language: Haskell2010
  build-depends:
    , base
    , lambdacube-quake3-engine
    , pretty-show
